2017-05-20  Ian Bolton  <ian.bolton@embecosm.com>

	* README.md: Mention building outside source tree and also
	expand example GDB session to cover breakpoints.

2017-05-20  Ian Bolton  <ian.bolton@embecosm.com>

	* README.md: Update status to mention breakpoints working.
	* server/Cpu.cpp: Add clearTrapAndRestartInstruction to properly
	continue after a breakpoint has caused a trap.
	* server/Cpu.h: New clearTrapAndRestartInstruction function.
	* server/GdbServer.cpp: Make single instruction stepping call
	clearTrapAndRestartInstruction before doing the step.

2017-05-20  Ian Bolton  <ian.bolton@embecosm.com>

	* configure.ac: Define and use VTESTBENCH variable.
	* README.md: Updated build instructions.
	* server/Makefile.am: No longer hardcode object locations.

2017-05-16  Ian Bolton  <ian.bolton@embecosm.com>

	* server/GdbServer.cpp: Debug only shown when GDBSERVER_DEBUG defined.

2017-05-16  Ian Bolton  <ian.bolton@embecosm.com>

	* README.md: Updated the GDB example session section.
	* server/Cpu.cpp: Bring step function in line with what GDB expects, to
	execute a single instruction rather than just one clock step.
	* server/Cpu.h: Add clock_step function.

2017-05-16  Ian Bolton  <ian.bolton@embecosm.com>

	* README.md: Added example GDB session instructions.

2017-05-16  Ian Bolton  <ian.bolton@embecosm.com>

	* server/Cpu.cpp: Write PC for each step while in reset, so that it is set
	in the model once out of reset.
	* server/GdbServer.cpp: Print out when we are writing PC and then read the
	value back to confirm it was written.
	* server/main.cpp: Cycling during reset has been deferred until we attempt
	to write PC. 

2017-05-15  Ian Bolton  <ian.bolton@embecosm.com>

	* server/Cpu.cpp: Detect inReset and trap situations and return bool from step.
	* server/Cpu.h: Add inReset and haveTrap, and return bool from step.
	* server/GdbServer.cpp: Handle 32-bit breakpoint instructions correctly.