@@ -130,7 +130,9 @@ RspConnection::rspConnect ()
       return  false;
     }
 
+#ifdef GDBSERVER_DEBUG
   cout << "Listening for RSP on port " <<  portNum << endl << flush;
+#endif
 
   // Accept a client which connects
   socklen_t  len = sizeof (sockAddr);		// Size of the socket address
@@ -158,8 +160,10 @@ RspConnection::rspConnect ()
   close (tmpFd);			// No longer need this
   signal (SIGPIPE, SIG_IGN);		// So we don't exit if client dies
 
+#ifdef GDBSERVER_DEBUG
   cout << "Remote debugging from host " << inet_ntoa (sockAddr.sin_addr)
        << endl;
+#endif
   return true;
 
 }	// rspConnect ()
@@ -171,7 +175,9 @@ RspConnection::rspClose ()
 {
   if (isConnected ())
     {
+#ifdef GDBSERVER_DEBUG
       cout << "Closing connection" << endl;
+#endif
       close (clientFd);
       clientFd = -1;
     }
