@@ -1,3 +1,10 @@
+2017-05-21  Ian Bolton  <ian.bolton@embecosm.com>
+
+	* server/GdbServer.cpp: Handle vKill packet, so that server
+	is terminated when GDB session quits.
+	* server/RspConnection.cpp: Don't output to stdout unless
+	GDBSERVER_DEBUG is defined.
+
 2017-05-20  Ian Bolton  <ian.bolton@embecosm.com>
 
 	* README.md: Mention building outside source tree and also
